--- a/en/html/guide/feature/fet-autolabel.html
+++ b/en/html/guide/feature/fet-autolabel.html
@@ -41,9 +41,9 @@
 	  Keys and associated functions
 	     <blockquote>
 	     <b class="tkeybd">L</b>: Activates the function and set/Modify Label<br>
-	     <b class="tkeybd">T</b>: Toggle label visibility<br>
+<!--	     <b class="tkeybd">T</b>: Toggle label visibility<br>
 	     <b class="tkeybd">H</b>: Set label visibility to false (hide)<br>
-	     <b class="tkeybd">V</b>: Set label visibility to true (show)<br>
+	     <b class="tkeybd">V</b>: Set label visibility to true (show)<br> -->
 	     <b class="tkeybd">A</b>: Ends the self-numbered label function<br>
 	   </blockquote>
       </p>
