--- a/fr/html/guide/analyze/ana-table.html
+++ b/fr/html/guide/analyze/ana-table.html
@@ -32,10 +32,10 @@
 	   L'onglet <b class="button">Entrées &amp; Sortie</b> vous permet d'afficher et éditer les listes des entrées et/ou des sorties et de préciser la largeur de leurs données.
       </p>
       <p>
-        Pour ajouter des éléments dans la liste, il suffit sélectionner la ligne avec <b class="tkeybd">Flèche Haut</b> ou <b class="tkeybd">Flèche Bas</b> ou de cliquer sur "Cliquez pour.." et d'introduire le nom désiré. La touche <b class="tkeybd">Retour a la ligne</b> termine l'opération. Vous pouvez observer dans la figure ci-dessus la ligne "c_out" insérée dans la liste des sorties. Ensuite vous pouvez à l'aide de la souris définir la largeur de donnée de cette ligne (sur la droite). Les touches <b class="tkeybd">Enter</b> ou <b class="tkeybd">Tab</b> termineront la saisie.
+        Pour ajouter des éléments dans la liste, il suffit de sélectionner la ligne avec <b class="tkeybd">Flèche Haut</b> ou <b class="tkeybd">Flèche Bas</b> ou de cliquer sur "Cliquez pour.." et d'introduire le nom désiré. La touche <b class="tkeybd">Retour à la ligne</b> qui termine l'opération. Vous pouvez observer dans la figure ci-dessus la ligne "c_out" insérée dans la liste des sorties. Ensuite vous pouvez à l'aide de la souris définir la largeur de donnée de cette ligne (sur la droite). Les touches <b class="tkeybd">Enter</b> ou <b class="tkeybd">Tab</b> termineront la saisie.
       </p>
       <p>
-        Si vous voulez renommer une des lignes existantes, Effectuez un double click sur le texte vous permettra de le modifier
+        Si vous voulez renommer une des lignes existantes, effectuez un double click sur le texte vous permettra de le modifier
       </p>
       <p>
         Pour supprimer une ligne, sélectionnez-la comme précédemment avec la souris ou les touches <b class="tkeybd">Flèche Haut</b> ou <b class="tkeybd">Flèche Bas</b> puis utilisez la touche <b class="tkeybd">Delete</b>
@@ -57,7 +57,7 @@
       </p>
       <p>
         Il est possible de modifier les valeurs actuelles apparaissant dans les colonnes de sortie en cliquant sur la valeur qui vous intéresse et en utilisant les touches du clavier <b class="tkeybd">0,1</b> et <b class="tkeybd">-</b> (représentant une valeur indéterminée) ou en haut les boutons <b class="button">-</b> , <b class="button">1</b> , <b class="button">0</b> . Après la saisie, le curseur descend d'une ligne dans la colonne.<br>
-        Les touches <b class="tkeybd">Flèche Haut/bas</b> ou <b class="tkeybd">Flèche Gauche/Droite</b> permettent de de déplacer dans la sélection.<br>
+        Les touches <b class="tkeybd">Flèche Haut/bas</b> ou <b class="tkeybd">Flèche Gauche/Droite</b> permettent de déplacer dans la sélection.<br>
       </p>
       <p>
         De la même manière vous pouvez modifier les données des colonnes d'entrée en y insérant des valeurs indéterminées (-) ou pour les supprimer et les remplacer par des 0 ou des 1. Comme nous le verrons à la page suivante, une valeur indéterminée permet l'élaboration des expressions minimales avec une certaine flexibilité.
@@ -66,17 +66,17 @@
         Dans ce contexte, le bouton <b class="button">Réduire les lignes dupliquées</b> permet de simplifier la représentation de la table et <b class="button">Afficher toutes les lignes</b> de les présenter dans leur intégralité.
       </p>
       <p>
-        Vous pouvez copier-coller des valeurs en utilisant le presse-papiers. Le presse-papiers peut être transféré vers n'importe quelle application qui supporte du texte avec comme séparateurs le caratère tabulation.
+        Vous pouvez copier-coller des valeurs en utilisant le presse-papiers. Le presse-papiers peut être transféré vers n'importe quelle application qui supporte du texte avec comme séparateurs le caractère tabulation.
       </p>
 	  <p>
 	    Notez que votre expression sera modifiée de manière irrémédiable si vous éditez la table de vérité et vice versa.
 	  </p>
       <p>
-        Si la table de vérité est basée sur un circuit existant, vous pourriez voir des carrés rouge dans les colonnes des sorties avec "E" à l'intérieur. Ceci correspond à des erreurs durant le calcul des valeurs pour cette ligne. Soit le circuit semblait osciller, ou la sortie était une erreur elle-même (ce qui devrait être représenté par un câble rouge dans le circuit Logisim).
+        Si la table de vérité est basée sur un circuit existant, vous pourriez voir des carrés rouges dans les colonnes des sorties avec "E" à l'intérieur. Ceci correspond à des erreurs durant le calcul des valeurs pour cette ligne. Soit le circuit semblait osciller, ou la sortie était une erreur elle-même (ce qui devrait être représenté par un câble rouge dans le circuit Logisim).
       </p>
 	  <h2 id="impexp">Les boutons Exporter table, Importer table </h2>
 	  <p>
-        Les boutons <b class="button">Importer table</b> et <b class="button">Exporter table</b> permettent de sauvegarder et respectivement de recharger une définition de table de vérité a partir <a href="ana-expimp.html">d'un fichier</a>.
+        Les boutons <b class="button">Importer table</b> et <b class="button">Exporter table</b> permettent de sauvegarder et respectivement de recharger une définition de table de vérité à partir <a href="ana-expimp.html">d'un fichier</a>.
 
       <p>
         <b>Suite&nbsp;:</b> <a href="ana-expr.html">Créer des expressions</a>.
