--- a/fr/html/guide/feature/fet-colors.html
+++ b/fr/html/guide/feature/fet-colors.html
@@ -50,7 +50,7 @@
         </li>
         <li>
           <p>
-            <strong>Rouge&nbsp;:</strong> Le câble transporte une valeur d'erreur. Ceci arrive souvent parce qu'une porte logique ne peut pas déterminer correctement sa sortie, peut-être parce qu'elle ne reçoit aucune entrée. Ceci peut aussi arriver parce que deux composants essayent d'envoyer deux valeurs différentes sur le câble. Ceci arrive dans l'exemple ci-dessus parce que l'un des bits de sortie envoie 0 sur le câble et l'autre envoie 1 sur le même câble, ce qui cause un conflit. Les câbles multibit deviennent rouges quand l'un des bits transporte une valeur d'erreur.
+            <strong>Rouge&nbsp;:</strong> Le câble transporte une valeur d'erreur. Ceci arrive souvent parce qu'une porte logique ne peut pas déterminer correctement sa sortie, peut-être parce qu'elle ne reçoit aucune entrée. Ceci peut aussi arriver parce que deux composants essayent d'envoyer deux valeurs différentes sur le câble. Ceci arrive dans l'exemple ci-dessus parce que l'un des bits de sortie emet 0 sur le câble et l'autre emet 1 sur le même câble, ce qui cause un conflit. Les câbles multibit deviennent rouges quand l'un des bits transporte une valeur d'erreur.
           </p>
         </li>
         <li>
@@ -60,12 +60,12 @@
         </li>
         <li>
           <p>
-            <strong>Vert-Fuchsia&nbsp;:</strong> Cet arrangement de couleurs indique que le fil a été sélectionné avec l'outil <b class="property">"poussé"</b> (<img class="icontxt" src="../../../../icons/1616/toolpoke.png" alt="#########">). Cela affichera l'état de la ligne dans une petite info-bulle et cela permet aussi de suivre une connexion dans un schema complexe.
+            <strong>Vert-Fuchsia&nbsp;:</strong> Cet arrangement de couleurs indique que le fil a été sélectionné avec l'outil <b class="property">"poussé"</b> (<img class="icontxt" src="../../../../icons/1616/toolpoke.png" alt="#########">). Cela affichera l'état de la ligne dans une petite infobulle et cela permet aussi de suivre une connexion dans un schéma complexe.
           </p>
         </li>
       </ul>
       <p>
-        <b>Suite&nbsp;:</b> <a href="fet-autolabel.html">Étiquettes auto-numérotées</a>.
+        <b>Suite&nbsp;:</b> <a href="fet-autolabel.html">Étiquettes autonumérotées</a>.
       </p>
     </div>
   </body>
