--- a/fr/html/guide/feature/fet-matrix.html
+++ b/fr/html/guide/feature/fet-matrix.html
@@ -24,7 +24,7 @@
         <img class="notscal" src="../../../../img-guide/feature-3-ghostmatrix.png" alt="#########">
       </p> 
       <p>		
-        Cliquez en haut à gauche de la position ou vous voulez placer la future matrice. Et complétez les données du formulaire. Par exemple&nbsp;: 4x5 éléments avec un espace de 4.
+        Cliquez en haut à gauche de la position où vous voulez placer la future matrice. Et complétez les données du formulaire. Par exemple&nbsp;: 4x5 éléments avec un espace de 4.
 	  <p align="center">
         <img class="notscal" src="../../../../img-guide/feature-4-matrix.png" alt="#########">
       </p> 
