--- a/fr/html/guide/feature/index.html
+++ b/fr/html/guide/feature/index.html
@@ -22,8 +22,8 @@
       <blockquote>
         - <a href="fet-creating.html">Créer des faisceaux de câbles</a>.<br>
         - Comment les redistribué sur des fils ou d'autres faisceaux. <a href="fet-splitting.html">Répartiteur</a><br>
-        - La signification des <a href="fet-colors.html">Couleurs des câbles</a> dans les schemas.<br>
-        - Commnet déposer des composants avec des <a href="fet-autolabel.html">Label auto-numéroté</a>.<br>
+        - La signification des <a href="fet-colors.html">Couleurs des câbles</a> dans les schémas.<br>
+        - Commnet déposer des composants avec des <a href="fet-autolabel.html">Label autonuméroté</a>.<br>
         - Comment <a href="fet-matrix.html">placer en matrice</a> les composants .<br>
       </blockquote>
 	  <p align="center">
