--- a/fr/html/guide/gui/gui-toolsbar.html
+++ b/fr/html/guide/gui/gui-toolsbar.html
@@ -269,7 +269,7 @@
               <img class=inbullet src="../../../../img-guide/projdesign.png" alt="#########" border="1">
             </td>
             <td>
-              <strong>Mode d'édition</strong>: Bascule du mode schema au mode édition de l'apparence alternativement.
+              <strong>Mode d'édition</strong>: Bascule du mode schéma au mode édition de l'apparence alternativement.
             </td>
           </tr>
           <tr>
