--- a/fr/html/guide/subcirc/sub-appear.html
+++ b/fr/html/guide/subcirc/sub-appear.html
@@ -26,20 +26,20 @@
         <img class="notscal" src="../../../../img-guide/subcirc-evolution-appear.png" alt="#########">
       </p>
       <p>
-        Dans l'apparence <b class="property">Logisim-Holycross</b> le sous-circuit est dessiné dans un rectangle avec le nom du circuit placé au nord, les entrées placé à l'est et les sorties placé à l'ouest. 
+        Dans l'apparence <b class="property">Logisim-Holycross</b> le sous-circuit est dessiné dans un rectangle avec le nom du circuit placé au nord, les entrées placées à l'est et les sorties placées à l'ouest. 
 		L'ordre des entrées et des sorties est déterminé de la même manière que dans l'apparence précédente.
       </p>
       <p align="center">
         <img class="notscal" src="../../../../img-guide/subcirc-holycross-appear.png" alt="#########">
       </p>
       <p>
-        Dans l'apparence <b class="property">Logisim-classique</b> le sous-circuit est dessiné dans un rectangle sans nom, sa dimension sera dépendante du nombre d'entrée et de sortie. Les entrées et les sorties seront positionné sur les côtés nord,sud, est, ouest selon leur orientation et l'ordre de leur apparition (de gauche à droite et de haut en bas) dans le schéma détaillé. L’ancrage étant au sommet de la pin nord-ouest.
+        Dans l'apparence <b class="property">Logisim-classique</b> le sous-circuit est dessiné dans un rectangle sans nom, sa dimension sera dépendante du nombre d'entrées et de sorties. Les entrées et les sorties seront positionnées sur les côtés nord, sud, est, ouest selon leur orientation et l'ordre de leur apparition (de gauche à droite et de haut en bas) dans le schéma détaillé. L’ancrage étant au sommet de la pin nord-ouest.
       </p>
       <p align="center">
         <img class="notscal" src="../../../../img-guide/subcirc-classic-appear.png" alt="#########">
       </p>
       <p>
-        Il est possible d'éditer un label sur l'instance du sous-circuit en effectuant un double-clic sur le rectangle. Le positionnement de la fonte et les attributs de la fonte sont modifiables dans le tableau des propriétés. Ce même tableau permet le paramétrage du autre label partagé (pour toutes les instances).
+        Il est possible d'éditer un label sur l'instance du sous-circuit en effectuant un double-clic sur le rectangle. Le positionnement de la fonte et les attributs de la fonte sont modifiables dans le tableau des propriétés. Ce même tableau permet le paramétrage de l'autre label partagé (pour toutes les instances).
       </p>
       <p>
         <b>Suite&nbsp;:</b> <a href="sub-personalise.html">Personnaliser l'apparence</a>.
