--- a/fr/html/guide/subcirc/sub-personalise.html
+++ b/fr/html/guide/subcirc/sub-personalise.html
@@ -146,7 +146,7 @@
               <img class=inbullet src="../../../../img-guide/tooldrawdyncomp.png" alt="#########" border="1">
             </td>
 			<td>
-			  <strong>Composants dynamiques</strong> Place un composant dynamique. <b class="tkeybd">click</b> ouvre une fenêtre pour la sélection des composants dans les sous-circuits. 
+			  <strong>Composants dynamiques</strong> Place un composant dynamique. Un <b class="tkeybd">clic</b> ouvre une fenêtre pour la sélection des composants dans les sous-circuits. 
             </td>
 		   </tr>
         </tbody>
