--- a/he/html/guide/feature/fet-autolabel.html
+++ b/he/html/guide/feature/fet-autolabel.html
@@ -46,9 +46,9 @@
         מקשים ופונקציות נלוות
     <blockquote>
         <b class="tkeybd">L</b> : מפעיל את הפונקציה והגדר/שנה תווית<br>
-        <b class="tkeybd">T</b> : החלף את נראות התווית<br>
+ <!--       <b class="tkeybd">T</b> : החלף את נראות התווית<br>
         <b class="tkeybd">H</b> : הגדר את נראות התווית ל-false (הסתר)<br>
-        <b class="tkeybd">V</b> : הגדר את נראות התווית ל-true (show)<br>
+        <b class="tkeybd">V</b> : הגדר את נראות התווית ל-true (show)<br> -->
         <b class="tkeybd">A</b> : מסיים את פונקציית התווית הממוספרת העצמית<br>
     </blockquote>
     <p>
