--- a/pt/html/guide/feature/fet-autolabel.html
+++ b/pt/html/guide/feature/fet-autolabel.html
@@ -41,9 +41,9 @@ Introduza um nome de etiqueta que termine com um número, por exemplo, "In_1".
 	  Touches et fonctions associées
 	     <blockquote>
 	     <b class="tkeybd">L</b>: Ativar a função e definir/modificar a etiqueta<br>
-	     <b class="tkeybd">T</b>: Alternar a visibilidade da etiqueta<br>
+<!--	     <b class="tkeybd">T</b>: Alternar a visibilidade da etiqueta<br>
 	     <b class="tkeybd">H</b>: Definir a visibilidade da etiqueta como falsa (esconder)<br>
-	     <b class="tkeybd">V</b>: Definir a visibilidade da etiqueta como verdadeira (mostrar)<br>
+	     <b class="tkeybd">V</b>: Definir a visibilidade da etiqueta como verdadeira (mostrar)<br> -->
 	     <b class="tkeybd">A</b>: Termina a função de etiqueta auto-numerada.<br>
 	   </blockquote>
       </p>
