--- a/fr/html/guide/analyze/ana-open.html
+++ b/fr/html/guide/analyze/ana-open.html
@@ -35,7 +35,7 @@
         Depuis une fenêtre d'édition de circuit, il est aussi possible de demander à Logisim l'analyse du circuit courant en sélectionnant le menu <b class=menu>| Projet |</b>→<b class=menu>| Analyser le circuit |</b>. Avant que Logisim ouvre la fenêtre, il va élaborer les expressions booléennes et la table de vérité correspondante au circuit et les afficher pour la visualisation.
       </p>
       <p>
-        Pour qu'une analyse soit couronnée de succès, chaque entrée doit être liée à un pin d'entrée d'un composant et chaque sortie à une broche de sortie d'un composant. Cela peut être des broches multiples. Cette version ne présente plus les limites du nombre d'entrée ou de sortie, cependant n'exagérez pas dans vos demandes. Selon les cas l'analyse peut prendre beaucoup de temps et il ne sera pas possible d'afficher les résultats.
+        Pour qu'une analyse soit couronnée de succès, chaque entrée doit être liée à un pin d'entrée d'un composant et chaque sortie à une broche de sortie d'un composant. Cela peut être des broches multiples. Cette version ne présente plus les limites du nombre d'entrées ou de sorties, cependant n'exagérez pas dans vos demandes. Selon les cas l'analyse peut prendre beaucoup de temps et il ne sera pas possible d'afficher les résultats.
       </p>
       <p>
         Dans l'élaboration d'expressions booléennes correspondant à un circuit, Logisim essayera d'abord de construire une expression booléenne correspondant exactement aux portes logiques du circuit. Mais si le circuit utilise des composants qui ne sont pas des portes logiques (par exemple un multiplexeur), ou si le circuit a plus de 100 niveaux de profondeur (improbable), alors il affichera une boîte de dialogue pour vous avertir qu'il n'est pas possible de dériver des expressions booléennes et Logisim va à la place dériver des expressions basées sur la table de vérité qui sera elle-même dérivée en testant silencieusement chaque combinaison en entrée et en lisant le résultat des sorties (méthode force-brute).
@@ -54,7 +54,7 @@
         Logisim effectuera peut-être des changements inattendus au circuit original. Le système d'analyse combinatoire exige que chaque entrée et sortie ait un nom unique qui soit conforme aux règles des identifiants Java. (En gros, chaque caractère doit être soit une lettre, soit un chiffre et le premier caractère doit être une lettre. Les espaces ne sont pas autorisés !) Il essaye d'utiliser les labels existants des pins et il'utilise une liste de valeurs par défaut si les labels n'existent pas. Si un seul label ne respecte pas les règles des identifiants Java, alors Logisim essayera si possible d'insérer un label valide.
       </p>
       <p>
-        Incidemment, l'ordre des entrées dans la table de vérité correspondra à l'ordre descendant dans le circuit original, et ensuite de gauche à droite. Le même ordre s'applique pour les sorties
+        Incidemment, l'ordre des entrées dans la table de vérité correspondra à l'ordre descendant dans le circuit original, et ensuite de gauche à droite. Le même ordre s'applique pour les sorties.
       </p>
       <p>
         <b>Suite&nbsp;:</b> <a href="ana-table.html">Editer la table de vérité</a>.
