--- a/fr/html/guide/feature/fet-autolabel.html
+++ b/fr/html/guide/feature/fet-autolabel.html
@@ -7,17 +7,17 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="fr">
     <title>
-      Étiquettes auto-numérotées 
+      Étiquettes autonumérotées 
     </title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
   </head>
   <body>
     <div class="maindiv">
       <h1>
-        Étiquettes auto-numérotées 
+        Étiquettes autonumérotées 
       </h1>
       <p>
-	   Cette option vous permet de placer des composants avec des étiquettes auto-numérotées, par exemple Led_1, Led_2&hellip; . Pour l'utiliser, procédez comme suit:
+	   Cette option vous permet de placer des composants avec des étiquettes autonumérotées, par exemple Led_1, Led_2&hellip; . Pour l'utiliser, procédez comme suit:
 	  </p>
 	  <p>
 	  Sélectionnez un outil dans le  <a href="../gui/gui-explore.html">panneau de navigation</a>, par exemple une connexion, et déplacez-le vers la surface de travail et avant de cliquer pour le déposer, appuyez sur la touche <b class="tkeybd">L</b> .
@@ -35,16 +35,16 @@
         <img class="notscal" src="../../../../img-guide/feature-2-ghost.png" alt="#########">
       </p> 
       <p>
-	   Pour désactiver, procédez de la même manière que pour l'activation, mais utilisez la touche <b class="tkeybd">A</b>. Si vous avez activé l'auto-étiquetage sur des composants d'un autre type. Vous devez le désactiver individuellement pour chaque type de composant. 
+	   Pour désactiver, procédez de la même manière que pour l'activation, mais utilisez la touche <b class="tkeybd">A</b>. Si vous avez activé l'autoétiquetage sur des composants d'un autre type. Vous devez le désactiver individuellement pour chaque type de composant. 
 	  </p>
 	  <p>
 	  Touches et fonctions associées
 	     <blockquote>
-	     <b class="tkeybd">L</b>&nbsp;: Activer la fonction et définir/modifier l'étiquette<br>
-	     <b class="tkeybd">T</b>&nbsp;: Basculer la visibilité de l'étiquette<br>
-	     <b class="tkeybd">H</b>&nbsp;: Définir la visibilité de l'étiquette sur faux (cacher)<br>
-	     <b class="tkeybd">V</b>&nbsp;: Définir la visibilité de l'étiquette sur vrai (montrer)<br>
-	     <b class="tkeybd">A</b>&nbsp;: Met fin à la fonction d'étiquette auto-numérotée<br>
+	     <b class="tkeybd">L</b>&nbsp;: Activer la fonction et définir/modifier l'étiquette.<br>
+<!--	     <b class="tkeybd">T</b>&nbsp;: Basculer la visibilité de l'étiquette.<br>
+	     <b class="tkeybd">H</b>&nbsp;: Définir la visibilité de l'étiquette sur faux (cacher).<br>
+	     <b class="tkeybd">V</b>&nbsp;: Définir la visibilité de l'étiquette sur vrai (montrer).<br> -->
+	     <b class="tkeybd">A</b>&nbsp;: Mets fin à la fonction d'étiquette autonumérotée.<br>
 	   </blockquote>
       </p>
       <p>
