--- a/fr/html/guide/subcirc/sub-library.html
+++ b/fr/html/guide/subcirc/sub-library.html
@@ -24,7 +24,7 @@
         <img class="notscal" src="../../../img-guide/subcirc-10-lib.png" alt="#########">
       </p>
 	  <p>
-		 <b class=note>Note&nbsp;:</b> La librairie ne doit pas contenir de circuit de même nom q'un circuit deja présent dans le projet.
+		 <b class=note>Note&nbsp;:</b> La librairie ne doit pas contenir de circuit de même nom qu'un circuit déja présent dans le projet.
       </p>
       <p>
         Chaque projet a un "<b>circuit principal</b>" désigné qui peut être modifié pour faire référence au circuit actuel via le menu <b class=menu>|&nbsp;Projet&nbsp;|</b>→<b class=menu>|&nbsp;Définir comme circuit principal&nbsp;|</b>. La <b>seule</b> signification de "Circuit principal" est simplement qu'il sera affiché lors de la première ouverture du projet. Le nom par défaut ("main") du circuit principal dans un fichier nouvellement créé n'a aucune signification et vous pouvez supprimer ou renommer ce circuit.
