--- a/pt/html/guide/subcirc/sub-personalise.html
+++ b/pt/html/guide/subcirc/sub-personalise.html
@@ -80,7 +80,7 @@
           </tr>
           <tr>
             <td class=toolslist valign="top">
-              <img class=inbullet src="../../../../img-guide/text.png" alt="#########" border="1">
+              <img class=inbullet src="../../../../img-guide/tooltext.png" alt="#########" border="1">
             </td>
             <td>
               <strong>Ferramenta de Texto:</strong> Adicionar ou editar texto.
@@ -88,7 +88,7 @@
           </tr>
           <tr>
             <td class=toolslist valign="top">
-              <img class=inbullet src="../../../../img-guide/drawline.png" alt="#########" border="1">
+              <img class=inbullet src="../../../../img-guide/tooldrawline.png" alt="#########" border="1">
             </td>
             <td>
               <strong>Ferramenta da linha:</strong> Criar um segmento de linha.
@@ -96,7 +96,7 @@
           </tr>
           <tr>
             <td class=toolslist valign="top">
-              <img class=inbullet src="../../../../img-guide/drawcurv.png" alt="#########" border="1">
+              <img class=inbullet src="../../../../img-guide/tooldrawcurv.png" alt="#########" border="1">
             </td>
             <td>
               <strong>Ferramenta Curva:</strong> CCriar uma curva Bézier quadrática. Para o primeira arraste, onde você especificará os parâmetros da curva. Depois clique para indicar a localização de três pontos de controlo. <b class="tkeybd">shift</b> et click no ponto de controle central impõem uma curva simétrica. <b class="tkeybd">Alt</b> et click no ponto central desenha a curva através do ponto de controle (sob o mouse).
@@ -104,7 +104,7 @@
           </tr>
           <tr>
             <td class=toolslist valign="top">
-              <img class=inbullet src="../../../../img-guide/drawplin.png" alt="#########" border="1">
+              <img class=inbullet src="../../../../img-guide/tooldrawplin.png" alt="#########" border="1">
             </td>
             <td>
               <strong>ferramenta Polyline:</strong> Criar uma seqüência de linhas conectadas, cada  <b class="tkeybd">cliqk</b> inicia um novo segmento. Um <b class="tkeybd">duplo-click</b> termina a sequência.
@@ -112,7 +112,7 @@
           </tr>
           <tr>
             <td class=toolslist valign="top">
-              <img class=inbullet src="../../../../img-guide/drawrect.png" alt="#########" border="1">
+              <img class=inbullet src="../../../../img-guide/tooldrawrect.png" alt="#########" border="1">
             </td>
             <td>
               <strong>Ferramenta retangular:</strong> Cria um rectângulo ou quadrado (<b class="tkeybd">Shift</b>) arrastando de um canto para o canto oposto.
@@ -120,7 +120,7 @@
           </tr>
           <tr>
             <td class=toolslist valign="top">
-              <img class=inbullet src="../../../../img-guide/drawrrct.png" alt="#########" border="1">
+              <img class=inbullet src="../../../../img-guide/tooldrawrrct.png" alt="#########" border="1">
             </td>
             <td>
               <strong>Ferramenta retangular:</strong> Cria um rectângulo ou quadrado (<b class="tkeybd">Shift</b>) com uma aresta arredondada arrastando de um canto para o canto oposto.
@@ -128,7 +128,7 @@
           </tr>
           <tr>
             <td class=toolslist valign="top">
-              <img class=inbullet src="../../../../img-guide/drawoval.png" alt="#########" border="1">
+              <img class=inbullet src="../../../../img-guide/tooldrawoval.png" alt="#########" border="1">
             </td>
             <td>
               <strong>Ferramenta oval:</strong> Cria um círculo ou oval (<b class="tkeybd">Shift</b>) deslizando de um canto do seu contorno para o canto oposto.
@@ -136,7 +136,7 @@
           </tr>
           <tr>
             <td class=toolslist valign="top">
-              <img class=inbullet src="../../../../img-guide/drawpoly.png" alt="#########" border="1">
+              <img class=inbullet src="../../../../img-guide/tooldrawpoly.png" alt="#########" border="1">
             </td>
             <td>
               <strong>Ferramenta Polígono:</strong> Criar um polígono arbitrário. cada <b class="tkeybd">click</b> inicia um novo lado. Um <b class="tkeybd">duplo-click</b> termina a sequência.
@@ -144,7 +144,7 @@
           </tr>
           <tr>
             <td class=toolslist valign="top">
-              <img class=intxt src="../../../../img-guide/shownstate.png" alt="#########" border="1">
+              <img class=inbullet src="../../../../img-guide/tooldrawdyncomp.png" alt="#########" border="1">
             </td>
             <td>
               <strong>Ferramenta de componente dinâmico:</strong> 
